--- a/styles/cab-case.css
+++ b/styles/cab-case.css
@@ -158,7 +158,7 @@ ul li::marker {
     width: 100%;
     height: auto;
     object-fit: cover;
-    border-radius: 0;
+    border-radius: 0px;
     border: none;
     cursor: zoom-in;
 }
@@ -342,7 +342,7 @@ body.modal-open {
     .modal-content {
         max-width: 100%;
         max-height: 100%;
-        border-radius: 0;
+        border-radius: 0px;
     }
 
     .case-image {
