--- a/styles/grinny-case.css
+++ b/styles/grinny-case.css
@@ -384,7 +384,7 @@ body.modal-open {
     .modal-content {
         max-width: 100%;
         max-height: 100%;
-        border-radius: 0;
+        border-radius: 0px;
     }
 
     .case-image {
